test/libsolidity/syntaxTests/more_than_256_syntaxerrors.sol
contract C {
  function f() public {
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
  }
}
// ----
// SyntaxError 4123: (41-49): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (55-63): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (69-77): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (83-91): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (97-105): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (111-119): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (125-133): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (139-147): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (153-161): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (167-175): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (181-189): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (195-203): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (209-217): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (223-231): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (237-245): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (251-259): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (265-273): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (279-287): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (293-301): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (307-315): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (321-329): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (335-343): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (349-357): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (363-371): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (377-385): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (391-399): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (405-413): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (419-427): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (433-441): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (447-455): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (461-469): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (475-483): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (489-497): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (503-511): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (517-525): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (531-539): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (545-553): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (559-567): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (573-581): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (587-595): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (601-609): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (615-623): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (629-637): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (643-651): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (657-665): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (671-679): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (685-693): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (699-707): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (713-721): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (727-735): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (741-749): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (755-763): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (769-777): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (783-791): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (797-805): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (811-819): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (825-833): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (839-847): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (853-861): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (867-875): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (881-889): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (895-903): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (909-917): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (923-931): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (937-945): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (951-959): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (965-973): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (979-987): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (993-1001): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1007-1015): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1021-1029): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1035-1043): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1049-1057): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1063-1071): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1077-1085): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1091-1099): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1105-1113): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1119-1127): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1133-1141): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1147-1155): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1161-1169): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1175-1183): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1189-1197): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1203-1211): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1217-1225): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1231-1239): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1245-1253): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1259-1267): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1273-1281): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1287-1295): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1301-1309): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1315-1323): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1329-1337): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1343-1351): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1357-1365): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1371-1379): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1385-1393): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1399-1407): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1413-1421): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1427-1435): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1441-1449): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1455-1463): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1469-1477): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1483-1491): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1497-1505): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1511-1519): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1525-1533): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1539-1547): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1553-1561): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1567-1575): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1581-1589): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1595-1603): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1609-1617): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1623-1631): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1637-1645): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1651-1659): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1665-1673): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1679-1687): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1693-1701): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1707-1715): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1721-1729): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1735-1743): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1749-1757): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1763-1771): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1777-1785): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1791-1799): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1805-1813): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1819-1827): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1833-1841): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1847-1855): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1861-1869): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1875-1883): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1889-1897): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1903-1911): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1917-1925): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1931-1939): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1945-1953): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1959-1967): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1973-1981): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (1987-1995): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2001-2009): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2015-2023): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2029-2037): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2043-2051): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2057-2065): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2071-2079): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2085-2093): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2099-2107): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2113-2121): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2127-2135): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2141-2149): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2155-2163): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2169-2177): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2183-2191): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2197-2205): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2211-2219): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2225-2233): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2239-2247): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2253-2261): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2267-2275): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2281-2289): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2295-2303): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2309-2317): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2323-2331): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2337-2345): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2351-2359): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2365-2373): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2379-2387): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2393-2401): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2407-2415): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2421-2429): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2435-2443): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2449-2457): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2463-2471): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2477-2485): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2491-2499): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2505-2513): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2519-2527): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2533-2541): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2547-2555): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2561-2569): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2575-2583): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2589-2597): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2603-2611): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2617-2625): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2631-2639): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2645-2653): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2659-2667): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2673-2681): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2687-2695): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2701-2709): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2715-2723): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2729-2737): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2743-2751): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2757-2765): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2771-2779): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2785-2793): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2799-2807): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2813-2821): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2827-2835): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2841-2849): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2855-2863): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2869-2877): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2883-2891): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2897-2905): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2911-2919): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2925-2933): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2939-2947): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2953-2961): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2967-2975): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2981-2989): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (2995-3003): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3009-3017): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3023-3031): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3037-3045): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3051-3059): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3065-3073): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3079-3087): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3093-3101): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3107-3115): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3121-3129): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3135-3143): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3149-3157): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3163-3171): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3177-3185): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3191-3199): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3205-3213): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3219-3227): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3233-3241): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3247-3255): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3261-3269): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3275-3283): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3289-3297): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3303-3311): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3317-3325): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3331-3339): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3345-3353): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3359-3367): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3373-3381): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3387-3395): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3401-3409): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3415-3423): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3429-3437): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3443-3451): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3457-3465): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3471-3479): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3485-3493): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3499-3507): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3513-3521): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3527-3535): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3541-3549): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3555-3563): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3569-3577): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3583-3591): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3597-3605): "continue" has to be in a "for" or "while" loop.
// SyntaxError 4123: (3611-3619): "continue" has to be in a "for" or "while" loop.
// Warning 4013: There are more than 256 errors. Aborting.
